# ff8

./: .gitignore  README.md  eslint.config.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite-custom-manifest-plugin.js  vite.config.ts
UI_Generated/: UI.tsx
UI_Generated/TextBox/: Text.module.css  TextBox.tsx  constants.ts  textUtils.ts  types.ts
converter/: Cargo.toml  d000.mch  main.rs
converter/output/: d000.gltf
public/: _sw.js  custom-manifest.json  exits.json  frames.html  sw.js
public/.vite/: manifest.json
public/HDFont/: script.sh
public/output/: bccent12.json  bccent15.json  bccent1a.json  bccent_1.json  bcform1a.json  bcform_1.json  bcgate1a.json  bcgate_1.json  bchtl1a.json  bchtl_1.json  bchtr1a.json  bchtr_1.json  bcmin11a.json  bcmin1_1.json  bcmin21a.json  bcmin22a.json  bcmin23a.json  bcmin2_1.json  bcmin2_2.json  bcmin2_3.json  bcport1a.json  bcport1b.json  bcport2a.json  bcport_1.json  bcport_2.json  bcsaka1a.json  bcsaka_1.json  bcsta1a.json  bcsta_1.json  bdenter1.json  bdifrit1.json  bdin1.json  bdin2.json  bdin3.json  bdin4.json  bdin5.json  bdview1.json  bg2f_1.json  bg2f_11.json  bg2f_1a.json  (+854 more)
scripts/: countOpcodes.js  countOpcodes.ts  generateExits--mutates.ts  generateExits.js  generateExits.ts  opcodeOutput.ts  opcodes.js  order.js  orderedOpcodes.js
src/: App.tsx  Entrypoint.tsx  Entypoint.tsx  LerpValue.ts  OfflineController.ts  PromiseSignal.ts  constants.ts  exits.ts  gateways.ts  index.css  index.html  main.tsx  store.ts  useIsTabActive.tsx  utils.ts
src/Character/: Character.tsx  Squall.tsx  (+1 more)
(+608 files in other folders)
