[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
byteorder = "1.4"
gltf = "1.4.1"
gltf-json = "1.4.1"
json = "0.12.4"
serde = "1.0.208"
serde_json = "1.0.125"


[[bin]]
name = "converter"
path = "main.rs"
